<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket History</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="date">Set Date</string>
    <string name="title_string">Pocket History</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_input_taker">Pocket History</string>
    <string name="action_search">Search</string>
    <string name="action_sort_asc">Sort Ascending</string>
    <string name="action_sort_desc">Sort Descending</string>
    <string name="action_save">Save</string>
    <string name="search_hint">Search text</string>
    <string name="title_activity_file_chooser">Saved Pages</string>
    <string name="action_saved_pages">Saved Pages</string>

</resources>
