<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.com.pockethistory.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_sort_asc"
        android:title="@string/action_sort_asc"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_desc"
        android:title="@string/action_sort_desc"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_saved_pages"
        android:title="@string/action_saved_pages"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="never" />
</menu>
